[gd_scene load_steps=5 format=2]

[ext_resource path="res://parts/accessories/7Segment.gd" type="Script" id=1]
[ext_resource path="res://parts/misc/Pin.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/symbols.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 90 )

[node name="7 Segment Display" type="Node2D"]
script = ExtResource( 1 )
show_state = true
is_ext_output = true
on_color = Color( 0.0784314, 1, 0, 1 )
off_color = Color( 0.192157, 0.192157, 0.192157, 0.454902 )

[node name="Symbol" type="ColorRect" parent="."]
margin_left = -60.0
margin_top = -90.0
margin_right = 60.0
margin_bottom = 90.0
mouse_filter = 2
color = Color( 0.266667, 0.266667, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Segments" type="Node2D" parent="."]
position = Vector2( -54.533, -89.872 )
scale = Vector2( 0.648, 0.648 )

[node name="A" type="Sprite" parent="Segments"]
position = Vector2( 84, 30 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="B" type="Sprite" parent="Segments"]
position = Vector2( 138, 84 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="C" type="Sprite" parent="Segments"]
position = Vector2( 138, 192 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="D" type="Sprite" parent="Segments"]
position = Vector2( 84, 246 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="E" type="Sprite" parent="Segments"]
position = Vector2( 30, 192 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="F" type="Sprite" parent="Segments"]
position = Vector2( 30, 84 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="G" type="Sprite" parent="Segments"]
position = Vector2( 84, 138 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 4, 327, 101, 30 )

[node name="DP" type="Sprite" parent="Segments"]
position = Vector2( 156, 252 )
rotation = 1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 125, 79, 20, 21 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -60, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 60, 90 )
shape = SubResource( 1 )

[node name="Pins1" type="Node2D" parent="."]

[node name="p1" type="Line2D" parent="Pins1"]
position = Vector2( -60, -80 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p2" type="Line2D" parent="Pins1"]
position = Vector2( -60, -60 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p3" type="Line2D" parent="Pins1"]
position = Vector2( -60, -40 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p4" type="Line2D" parent="Pins1"]
position = Vector2( -60, -20 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p5" type="Line2D" parent="Pins1"]
position = Vector2( -60, 0 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p6" type="Line2D" parent="Pins1"]
position = Vector2( -60, 20 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p7" type="Line2D" parent="Pins1"]
position = Vector2( -60, 40 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p8" type="Line2D" parent="Pins1"]
position = Vector2( -60, 60 )
points = PoolVector2Array( 0, 10, -20, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Pins2" type="Node2D" parent="."]

[node name="p9" type="Line2D" parent="Pins2"]
position = Vector2( -40, 110 )
points = PoolVector2Array( 0, -20, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p10" type="Line2D" parent="Pins2"]
position = Vector2( -20, 110 )
points = PoolVector2Array( 0, -20, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p11" type="Line2D" parent="Pins2"]
position = Vector2( 0, 110 )
points = PoolVector2Array( 0, -20, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p12" type="Line2D" parent="Pins2"]
position = Vector2( 20, 110 )
points = PoolVector2Array( 0, -20, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="p13" type="Line2D" parent="Pins2"]
position = Vector2( 40, 110 )
points = PoolVector2Array( 0, -20, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="Inputs" type="Node2D" parent="."]

[node name="Pin1" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, -70 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin2" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, -50 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin3" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, -30 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin4" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, -10 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin5" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, 10 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin6" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, 30 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin7" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, 50 )
scale = Vector2( 0.5, 0.5 )

[node name="Pin8" parent="Inputs" instance=ExtResource( 2 )]
position = Vector2( -80, 70 )
scale = Vector2( 0.5, 0.5 )

[node name="Outputs" type="Node2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
